--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ transformers==4.22.1
 textdistance==4.5.0
 datasets==2.5.2
 bokeh==2.4.1
-ml-leoxiang66==0.5.3
+ml-leoxiang66
 KeyBartAdapter==0.1.12
 scikit_learn==1.0.2
